--- a/src/app/threede/threede.component.html
+++ b/src/app/threede/threede.component.html
@@ -21,10 +21,24 @@
     <div class="row">
         <div class="col-12 text-center">
             <button type="button" class="btn btn-primary btn-rounded waves-effect waves-light" 
-            onclick="window.location.href='https://impulse.vvsk.in'">
+            onclick="window.location.href='https://fullstack.vvsk.in'">
             GET STARTED 
             <!-- <i _ngcontent-lns-c57="" class="material-icons align-middle mx-2 pointer float-end" tabindex="0" ng-reflect-router-link="ecm">open_in_new</i> -->
             </button>
+            
+        </div>
+    </div>
+    <div class="row mt-2">
+        <div class="col-12 text-center">
+            <a href="https://linkedin.com/in/vvskchaitanya" target="_blank" class="btn btn-primary btn-sm btn-icon">
+                <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://youtube.com/vvskchaitanya" target="_blank" class="btn btn-danger btn-sm btn-icon">
+                <i class="bi bi-youtube"></i>
+            </a>
+            <a href="https://github.com/vvskchaitanya" target="_blank" class="btn btn-dark btn-sm btn-icon">
+                <i class="bi bi-github"></i>
+            </a>
             
         </div>
     </div>
