--- a/src/app/threede/threede.component.less
+++ b/src/app/threede/threede.component.less
@@ -60,6 +60,15 @@
     padding: 0.84rem 2.14rem;
 }
 
+.btn.btn-danger{
+  background-color: red!important;
+}
+
+.btn-icon{
+  padding: 5px;
+  font-size: 25px;
+}
+
 .fs-18{
   font-size: 18px;
 }
