--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,13 +1,11 @@
-<div class="row mx-3 mb-3 shadow p-3 r">
-  <div class="col-12 text-center fs-2 fw-bold">
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <span class="c">Adapt - Reactive Programming</span>
-        </div>
-        <div class="carousel-item" *ngFor="let t of texts">
-          <span class="c">{{t}}</span>
-        </div>
+<div class="carousel-container text-center py-4 border-top border-bottom border-secondary border-opacity-10 mb-5">
+  <div id="textCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <h5 class="fw-light fst-italic text-secondary">"Adapt - Reactive Programming"</h5>
+      </div>
+      <div class="carousel-item" *ngFor="let t of texts">
+        <h5 class="fw-light fst-italic text-secondary">"{{t}}"</h5>
       </div>
     </div>
   </div>
