--- a/src/app/experience/experience.component.less
+++ b/src/app/experience/experience.component.less
@@ -1,281 +1,157 @@
-.r{
-  color:white;
-  background-color: tomato;
-  font-size: 35px;
-  font-weight: 500;
+@import '../../styles.less';
+
+.timeline-container {
+  position: relative;
+  padding: 2rem 0;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
-.timeline {
-    position: relative;
-    width: 660px;
-    margin: 0 auto;
-    margin-top: 20px;
-    padding: 1em 0;
-    list-style-type: none;
-  }
-  
-  .timeline:before {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    content: ' ';
-    display: block;
-    width: 15px;
-    height: 100%;
-    margin-left: -3px;
-    background: rgb(80,80,80);
-    background: -moz-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
-    background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    
-    z-index: 5;
-  }
-  
-  .timeline li {
-    padding: 1em 0;
-  }
-  
-  .timeline li:after {
-    content: "";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-  }
-  
-  .direction-l {
-    position: relative;
-    width: 300px;
-    float: left;
+// The vertical line
+.timeline-container::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  background: @card-border;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -1px;
+  z-index: 0;
+}
+
+.timeline-item {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+  margin-bottom: 30px;
+
+  &.left {
+    left: 0;
     text-align: right;
+
+    .date-label {
+      left: auto;
+      right: -140px;
+    }
+
+    .timeline-content {
+      border-right: 4px solid @accent-color;
+      border-left: none;
+    }
+
+    &::after {
+      // The dot
+      right: -9px; // width 18px / 2 = 9
+    }
   }
-  
-  .direction-r {
-    position: relative;
-    width: 300px;
-    float: right;
-  }
-  
-  .flag-wrapper {
-    position: relative;
-    display: inline-block;
-    
-    text-align: center;
-  }
-  
-  .flag {
-    position: relative;
-    display: inline;
-    background: rgb(248,248,248);
-    padding: 6px 10px;
-    border-radius: 5px;
-    
-    font-weight: 600;
+
+  &.right {
+    left: 50%;
     text-align: left;
+
+    .date-label {
+      right: auto;
+      left: -140px;
+      text-align: right;
+    }
+
+    .timeline-content {
+      border-left: 4px solid @accent-color;
+      border-right: none;
+    }
+
+    &::after {
+      // The dot
+      left: -9px;
+    }
   }
-  
-  .direction-l .flag {
-    -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-    -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-    box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  }
-  
-  .direction-r .flag {
-    -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-    -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  }
-  
-  .direction-l .flag:before,
-  .direction-r .flag:before {
+
+  // The dot
+  &::after {
+    content: '';
     position: absolute;
-    top: 50%;
-    right: -40px;
-    content: ' ';
-    display: block;
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    background: #fff;
-    border-radius: 10px;
-    border: 4px solid rgb(255,80,80);
-    z-index: 10;
+    width: 18px;
+    height: 18px;
+    right: -9px;
+    background-color: @primary-bg;
+    border: 4px solid @accent-color;
+    top: 25px;
+    border-radius: 50%;
+    z-index: 1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
-  
-  .direction-r .flag:before {
-    left: -32px;
-  }
-  
-  .direction-l .flag:after {
-    content: "";
-    position: absolute;
-    left: 100%;
-    top: 50%;
-    height: 0;
-    width: 0;
-    margin-top: -8px;
-    border: solid transparent;
-    border-left-color: rgb(248,248,248);
-    border-width: 8px;
-    pointer-events: none;
-  }
-  
-  .direction-r .flag:after {
-    content: "";
-    position: absolute;
-    right: 100%;
-    top: 50%;
-    height: 0;
-    width: 0;
-    margin-top: -8px;
-    border: solid transparent;
-    border-right-color: rgb(248,248,248);
-    border-width: 8px;
-    pointer-events: none;
-  }
-  
-  .time-wrapper {
-    display: inline;
-    
-    line-height: 1em;
-    font-size: 0.66666em;
-    color: rgb(250,80,80);
-    vertical-align: middle;
-  }
-  
-  .direction-l .time-wrapper {
-    float: left;
-  }
-  
-  .direction-r .time-wrapper {
-    float: right;
-  }
-  
-  .time {
-    display: inline-block;
-    padding: 4px 6px;
-    margin: 0px 10px;
-    background: rgb(248,248,248);
-  }
-  
-  .desc {
-    margin: 1em 0.75em 0 0;
-    font-size: 1em;
-    font-style: italic;
-    line-height: 1.5em;
-  }
-  
-  .direction-r .desc {
-    margin: 1em 0 0 0.75em;
-  }
-  
-  /* ================ Timeline Media Queries ================ */
-  
-  @media screen and (max-width: 660px) {
-  
-  .timeline {
-       width: 100%;
-      padding: 4em 0 1em 0;
-  }
-  
-  .timeline li {
-      padding: 2em 0;
-  }
-  
-  .direction-l,
-  .direction-r {
-      float: none;
-      width: 100%;
-  
-      text-align: center;
-  }
-  
-  .flag-wrapper {
-      text-align: center;
-  }
-  
-  .flag {
-      background: rgb(255,255,255);
-      z-index: 15;
-  }
-  
-  .direction-l .flag:before,
-  .direction-r .flag:before {
-    position: absolute;
-    top: -30px;
-      left: 50%;
-      content: ' ';
-      display: block;
-      width: 20px;
-      height: 20px;
-      margin-left: -5px;
-      background: #fff;
-      border-radius: 10px;
-      border: 4px solid rgb(255,80,80);
-      z-index: 10;
-  }
-  
-  .direction-l .flag:after,
-  .direction-r .flag:after {
-      content: "";
-      position: absolute;
-      left: 50%;
-      top: -8px;
-      height: 0;
-      width: 0;
-      margin-left: -5px;
-      border: solid transparent;
-      border-bottom-color: rgb(255,255,255);
-      border-width: 8px;
-      pointer-events: none;
-  }
-  
-  .time-wrapper {
-      display: block;
-      position: relative;
-      margin: 4px 0 0 0;
-      z-index: 14;
-  }
-  
-  .direction-l .time-wrapper {
-      float: none;
-  }
-  
-  .direction-r .time-wrapper {
-      float: none;
-  }
-  
-  .desc {
-      position: relative;
-      margin: 1em 0 0 0;
-      padding: 1em;
-      background: rgb(245,245,245);
-      -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
-      -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
-      box-shadow: 0 0 1px rgba(0,0,0,0.20);
-      
-    z-index: 15;
-  }
-  
-  .direction-l .desc,
-  .direction-r .desc {
-      position: relative;
-      margin: 1em 1em 0 1em;
-      padding: 1em;
-      
-    z-index: 15;
-  }
-  
 }
 
-@media screen and (min-width: 400px) and  (max-width: 660px) {
+.timeline-content {
+  padding: 20px;
+  background: @card-bg;
+  border-radius: 8px;
+  border: 1px solid @card-border;
+  position: relative;
+  transition: transform 0.3s;
 
-    .direction-l .desc,
-    .direction-r .desc {
-        margin: 1em 4em 0 4em;
+  &:hover {
+    transform: scale(1.02);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+  }
+
+  h5 {
+    color: @text-primary;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  h6 {
+    color: @accent-color;
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+    font-weight: normal;
+  }
+
+  p {
+    margin: 0;
+    color: @text-secondary;
+    font-size: 0.95rem;
+    line-height: 1.5;
+  }
+
+  .date-badge {
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.05);
+    padding: 2px 8px;
+    border-radius: 4px;
+    font-size: 0.8rem;
+    color: @text-secondary;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .timeline-container::after {
+    left: 31px;
+  }
+
+  .timeline-item {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+    text-align: left !important;
+
+    &.left,
+    &.right {
+      left: 0;
+
+      .timeline-content {
+        border: 1px solid @card-border;
+        border-left: 4px solid @accent-color;
+      }
     }
-    
+
+    &.left::after,
+    &.right::after {
+      left: 22px;
     }
+  }
+}
