--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,43 +1,54 @@
-.c{
-    top:0px;
+.c {
+    top: 0px;
     position: sticky;
     height: 70px;
-    background: #252526;
+    background: #161b22;
     color: white;
-    .material-icons{
-        font-size:30px
+
+    .material-icons {
+        font-size: 30px
     }
-    .t{
-        height:45px;
+
+    .t {
+        height: 45px;
         margin: 10px 0px;
         font-size: 30px;
-        border-right: 10px solid #252526;
+        border-right: 10px solid #161b22;
         white-space: nowrap;
-        overflow: hidden; 
+        overflow: hidden;
         display: inline-block;
         font-weight: 500;
     }
 
 }
 
-.a{
-    animation-name: typetext,blinkcursor;
-    animation-duration:  2s, 500ms;
-    animation-timing-function:  steps(15), steps(15);
-    animation-delay:  0.5s, 0s;
+.a {
+    animation-name: typetext, blinkcursor;
+    animation-duration: 2s, 500ms;
+    animation-timing-function: steps(15), steps(15);
+    animation-delay: 0.5s, 0s;
     animation-iteration-count: 1, 8;
     animation-direction: normal;
     animation-fill-mode: both;
 }
 
 
-@keyframes typetext{
-    from{width: 0.5rem}
-    to{width: 16rem}
+@keyframes typetext {
+    from {
+        width: 0.5rem
+    }
+
+    to {
+        width: 16rem
+    }
 }
 
 @keyframes blinkcursor {
-    from{border-right-color: white;}
-    to{border-right-color: #252526;}
-}
+    from {
+        border-right-color: white;
+    }
 
+    to {
+        border-right-color: #161b22;
+    }
+}
