--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,18 +1,23 @@
-<div class="row m-0 px-2 r text-center">
-    <div class="col-12 text-center">
-        Projects
-    </div>
-</div>
-<div class="container">
-    <div class="row mt-3">
-        <div class="col-md-4 col-sm-6 col-xs-12 m-0 p-2 h-100" *ngFor="let p of projects">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h5 class="card-title fs-3 fw-bold">{{p.name}}<i *ngIf="linkEnabled" class="material-icons align-middle mx-2 pointer float-end">open_in_new</i></h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{p.about}}</h6>
-                    <p class="card-text">
-                        {{p.text}}
-                    </p>
+<div class="row g-4">
+    <div class="col-md-6 col-lg-4" *ngFor="let p of projects">
+        <div class="project-card h-100">
+            <div class="card-body p-4 d-flex flex-column">
+                <div class="d-flex justify-content-between align-items-start mb-3">
+                    <div class="project-icon">
+                        <i class="bi bi-kanban fs-4 text-white"></i>
+                    </div>
+                    <i *ngIf="linkEnabled" class="bi bi-box-arrow-up-right pointer opacity-50"></i>
+                </div>
+
+                <h5 class="fw-bold mb-1">{{p.name}}</h5>
+                <h6 class="text-accent small mb-3 text-uppercase">{{p.about}}</h6>
+
+                <p class="text-secondary small mb-4 flex-grow-1">
+                    {{p.text}}
+                </p>
+
+                <div class="mt-auto">
+                    <!-- Placeholder for tags or links if data existed -->
                 </div>
             </div>
         </div>
