--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -1,16 +1,20 @@
-<div class="row m-0 px-2 r text-center">
-    <div class="col-12 text-center">
-        Starter Git Repos
-    </div>
-</div>
-<div class="container">
-    <div class="row mt-3">
-        <div class="col-md-4 col-sm-6 col-xs-12 m-0 p-2 h-100" *ngFor="let repo of repos">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h5 class="card-title fs-6 fw-bold pointer">{{ repo.name | uppercase}}<i  class="material-icons align-middle mx-2 pointer float-end" (click)="open(repo)">open_in_new</i></h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{ repo.description ? repo.description : 'No description available' }}</h6>
+<div class="row g-4">
+    <div class="col-md-6 col-lg-4" *ngFor="let repo of repos">
+        <div class="repo-card h-100 p-4 d-flex flex-column justify-content-between pointer" (click)="open(repo)">
+            <div>
+                <div class="d-flex justify-content-between align-items-start mb-3">
+                    <i class="bi bi-github fs-3"></i>
+                    <i class="bi bi-box-arrow-up-right fs-5 opacity-50"></i>
                 </div>
+                <h5 class="fw-bold mb-2">{{ repo.name | uppercase }}</h5>
+                <p class="text-secondary small mb-3 description-clamp">
+                    {{ repo.description || 'No description available' }}
+                </p>
+            </div>
+            <div
+                class="mt-3 pt-3 border-top border-secondary border-opacity-10 d-flex justify-content-between align-items-center">
+                <span class="badge bg-dark border border-secondary text-secondary">Public</span>
+                <small class="text-muted">View Code</small>
             </div>
         </div>
     </div>
