--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,90 +1,39 @@
-<div class="row m-0 px-2 r text-center">
-  <div class="col-12 text-center">
-    Tech Stack
-  </div>
-</div>
-<div class="container">
-  <div class="card m-2 shadow">
-    <div class="card-content p-1">
-      <h4 class="brown-text light">Frontend / UI </h4>
-      <div class="row text-center">
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/html5.png" class="responsive-img">HTML5
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/css3.png" class="responsive-img">CSS3
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/javascript.png" class="responsive-img">Javascript
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/angular.png" class="responsive-img">Angular
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/reactjs.png" class="responsive-img">React
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/vuejs.png" class="responsive-img">Vue JS
-        </div>
+<div class="skills-grid container-fluid p-0">
+  <!-- Frontend -->
+  <div class="skill-category mb-4">
+    <h6 class="category-title text-secondary mb-3 text-uppercase small fw-bold spacing-2">
+      <i class="bi bi-window-sidebar me-2"></i> Frontend / UI
+    </h6>
+    <div class="skill-items-container">
+      <div class="skill-item" *ngFor="let item of frontend">
+        <img [src]="item.img" [alt]="item.name" class="skill-icon">
+        <span class="skill-name">{{item.name}}</span>
       </div>
     </div>
   </div>
-  <div class="card m-2 shadow">
-    <div class="card-content p-1">
-      <h4 class="brown-text light">Backend / API </h4>
-      <div class="row text-center">
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/java.png" class="responsive-img">Java
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/nodejs.png" class="responsive-img">Node JS
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/dotnet.png" class="responsive-img">.NET Framework
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/spring.png" class="responsive-img">Spring Framework
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/boot.png" class="responsive-img">Spring Boot
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/kafka.png" class="responsive-img">Apache Kafka
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/mongodb.png" class="responsive-img">Mongo DB
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/oracle.png" class="responsive-img">Oracle DB
-        </div>
+
+  <!-- Backend -->
+  <div class="skill-category mb-4">
+    <h6 class="category-title text-secondary mb-3 text-uppercase small fw-bold spacing-2">
+      <i class="bi bi-server me-2"></i> Backend / API
+    </h6>
+    <div class="skill-items-container">
+      <div class="skill-item" *ngFor="let item of backend">
+        <img [src]="item.img" [alt]="item.name" class="skill-icon">
+        <span class="skill-name">{{item.name}}</span>
       </div>
     </div>
   </div>
-  <div class="card m-2 shadow">
-    <div class="card-content p-1">
-      <h4 class="brown-text light">DevOps Tools</h4>
-      <div class="row text-center">
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/git.png" class="responsive-img">Git
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/jenkins.png" class="responsive-img">Jenkins
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/maven.png" class="responsive-img">Maven
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img//logo/gradle.png" class="responsive-img">Gradle
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/jfrog.png" class="responsive-img">Jfrog
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/aws.png" class="responsive-img">AWS
-        </div>
-        <div class="col s4 m2">
-          <img alt="" src="/assets/img/logo/cloudfoundry.png" class="responsive-img">Cloud Foundry
-        </div>
+
+  <!-- DevOps -->
+  <div class="skill-category">
+    <h6 class="category-title text-secondary mb-3 text-uppercase small fw-bold spacing-2">
+      <i class="bi bi-gear-wide-connected me-2"></i> DevOps & Cloud
+    </h6>
+    <div class="skill-items-container">
+      <div class="skill-item" *ngFor="let item of devops">
+        <img [src]="item.img" [alt]="item.name" class="skill-icon">
+        <span class="skill-name">{{item.name}}</span>
       </div>
     </div>
   </div>
