--- a/src/app/typewriter/typewriter.component.html
+++ b/src/app/typewriter/typewriter.component.html
@@ -1,11 +1,6 @@
-<div class="row">
-    <div class="text-center fw-bold">
-        <p class="line-1 anim-typewriter1">
-            UX Designer </p>
-        <p class="line-1 anim-typewriter2">
-            Tech Consultant </p>
-        <p class="line-1 anim-typewriter3">
-            Fullstack Developer </p>
-        <p class="line-1 anim-typewriter4">Senior Software Engineer</p>
-    </div>
+<div class="d-flex flex-column align-items-center">
+    <p class="line-1 anim-typewriter1 mb-1">UX Designer</p>
+    <p class="line-1 anim-typewriter2 mb-1">Tech Consultant</p>
+    <p class="line-1 anim-typewriter3 mb-1">Fullstack Developer</p>
+    <p class="line-1 anim-typewriter4 mb-0">Lead Software Engineer</p>
 </div>
