--- a/src/app/modules/bpm/home/home.component.less
+++ b/src/app/modules/bpm/home/home.component.less
@@ -1,22 +1,26 @@
+@import '../../../../styles.less';
+
 .r {
     overflow: hidden;
     position: relative;
     height: 70px;
-    color: antiquewhite;
-    background-color: black;
-    font-family: 'Lexend Deca', sans-serif;
+    color: @text-primary;
+    background-color: @sidebar-bg;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
-.pointer.n:hover{
-    color:goldenrod;
-    border-bottom:2px solid goldenrod;
+.pointer.n:hover {
+    color: @accent-color;
+    border-bottom: 2px solid @accent-color;
 }
 
-.ic{
+.ic {
     font-size: 70px;
-    color: seagreen
+    color: @success-color;
 }
-.it{
+
+.it {
     font-weight: 500;
     font-size: 20px;
+    color: @text-primary;
 }
