--- a/src/app/store/store.component.less
+++ b/src/app/store/store.component.less
@@ -1,6 +1,7 @@
-.r{
-    color:white;
-    background-color: tomato;
-    font-size: 35px;
-    font-weight: 500;
+.container {
+    .card {
+        background-color: #1c2128;
+        color: white;
+        border: 1px solid #30363d;
+    }
 }
