--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,7 +1,8 @@
-.modal.extended{
-    top:100px;
-    display:block;
-    .modal-content{
-        background: floralwhite;
+.modal.extended {
+    top: 100px;
+    display: block;
+
+    .modal-content {
+        background: lightslategrey;
     }
 }
